[gd_scene load_steps=5 format=2]

[ext_resource path="res://theme1.tres" type="Theme" id=1]
[ext_resource path="res://Scenes&scripts/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Assets/SFX/menu_select.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/GFX/OnlyWayOut_3.png" type="Texture" id=4]

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pic" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 640.0
texture = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 640.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="MarginContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 256.0
rect_min_size = Vector2( 0, 256 )
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/Title"]
visible = false
margin_top = 120.0
margin_right = 1024.0
margin_bottom = 136.0
text = "Only Way Out (By Woffelson, GGJ 2022)"
align = 1

[node name="Buttons" type="MarginContainer" parent="VBoxContainer"]
margin_top = 260.0
margin_right = 1024.0
margin_bottom = 572.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Buttons"]
margin_right = 1024.0
margin_bottom = 312.0

[node name="Button" type="Button" parent="VBoxContainer/Buttons/VBoxContainer"]
margin_left = 352.0
margin_right = 672.0
margin_bottom = 75.0
rect_min_size = Vector2( 320, 0 )
focus_neighbour_top = NodePath("../Button4")
focus_neighbour_bottom = NodePath("../Button2")
size_flags_horizontal = 6
size_flags_vertical = 3
text = "Continue"

[node name="Button2" type="Button" parent="VBoxContainer/Buttons/VBoxContainer"]
margin_left = 352.0
margin_top = 79.0
margin_right = 672.0
margin_bottom = 154.0
rect_min_size = Vector2( 320, 0 )
focus_neighbour_top = NodePath("../Button")
focus_neighbour_bottom = NodePath("../Button3")
size_flags_horizontal = 6
size_flags_vertical = 3
text = "New Game"

[node name="Button3" type="Button" parent="VBoxContainer/Buttons/VBoxContainer"]
margin_left = 352.0
margin_top = 158.0
margin_right = 672.0
margin_bottom = 233.0
rect_min_size = Vector2( 320, 0 )
focus_neighbour_top = NodePath("../Button2")
focus_neighbour_bottom = NodePath("../Button4")
size_flags_horizontal = 6
size_flags_vertical = 3
text = "Instructions"

[node name="Button4" type="Button" parent="VBoxContainer/Buttons/VBoxContainer"]
margin_left = 352.0
margin_top = 237.0
margin_right = 672.0
margin_bottom = 312.0
rect_min_size = Vector2( 320, 0 )
focus_neighbour_top = NodePath("../Button3")
focus_neighbour_bottom = NodePath("../Button")
size_flags_horizontal = 6
size_flags_vertical = 3
text = "Quit"

[node name="Speissss" type="MarginContainer" parent="VBoxContainer"]
margin_top = 576.0
margin_right = 1024.0
margin_bottom = 640.0
rect_min_size = Vector2( 0, 64 )
size_flags_horizontal = 3

[node name="PauseLayer" type="CanvasLayer" parent="."]

[node name="klik" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 3 )
volume_db = -10.703

[connection signal="pressed" from="VBoxContainer/Buttons/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/VBoxContainer/Button4" to="." method="_on_Button4_pressed"]
